emberjs_application/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: Frontend
  name: orderui
  namespace: nges-core-framework
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentconfig: orderui
  type: ClusterIP
