emberjs_application/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: Frontend
  name: orderui
  namespace: nges-core-framework
spec:
  host: orderui-nges-core-framework.apps.115.127.24.184.nip.io
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: orderui
    weight: 100
  wildcardPolicy: None
